--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+    <header>
+        <h1 class="page-title">Taskinator</h1>
+        <p>Click the button below to add a new task!</p>
+        <button class="btn">Add task</button>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 
     <script src="./assets/js/script.js"></script>
 </body>
