--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
 
     </header>
     <main>
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks To Do</h2>
+            <ul class="task-list">
+                <li class ="task-item">A task is going to be added soon!</li>
+            </ul>
+        </section>
 
     </main>
     <footer>
+        &copy;2020 by Taskinator
 
     </footer>
 
