--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     <p>Click the button below to add a new task!</p>
     <form id="task-form">
       <div class="form-group">
-        <select name="task-type">
-          <option value=""disabled selected>Pick a task type</option>
+        <input type="test name=" task-name" class="text-input" placeholder="Enter Task Name" />
+      </div>
+      <div class="form-group">
+        <select name="task-type" class="select-dropdown">
+          <option value="" disabled selected>Pick a task type</option>
           <option value="Print">Print</option>
           <option value="web">Web</option>
           <option value="Mobile">Mobile</option>
         </select>
-        <input type="text" name="task-name" placeholder="Enter Task Name" />
       </div>
       <div class="form-group">
         <button class="btn" id="save-task">Add Task</button>
