--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Click the button below to add a new task!</p>
     <form id="task-form">
       <div class="form-group">
-        <input type="test name=" task-name" class="text-input" placeholder="Enter Task Name" />
+        <input type="test" name="task-name"  class="text-input" placeholder="Enter Task Name" />
       </div>
       <div class="form-group">
         <select name="task-type" class="select-dropdown">
