--- a/index.html
+++ b/index.html
@@ -16,30 +16,18 @@
     <p>Click the button below to add a new task!</p>
     <form id="task-form">
       <div class="form-group">
-
         <input type="text" name="task-name" placeholder="Enter Task Name" />
-
-
-        
-
-
       </div>
       <div class="form-group">
         <select name="task-type" class="select-dropdown">
           <option value="" selected disabled>Pick a task type</option>
           <option value="Print">Print</option>
-
           <option value="Web">Web</option>
-
-
-          <option value="web">Web</option>
-
-
-
+          <option value="Mobile">Mobile</option>
+        </select>
+      </div>
+      <div class="form-group">
         <button class="btn" id="save-task" type="submit">Add Task</button>
-
-        
-
       </div>
     </form>
   </header>
@@ -48,12 +36,6 @@
     <!-- Tasks To Do -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
-
-
-  
-
-
-
       <ul class="task-list" id="tasks-to-do"></ul>
     </section>
 
@@ -67,9 +49,6 @@
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks Completed</h2>
       <ul class="task-list" id="tasks-completed"></ul>
-
-
-
     </section>
   </main>
 
